--- a/ingreso.html
+++ b/ingreso.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Felicitaciones!! pudiste ingresar<span>(Creado por Jonnathan Sotelo)</span></h1>
+        <h1 class="text">Felicitaciones!! pudiste ingresar<span class="span">(Creado por Jonnathan Sotelo)</span></h1>
     </div>
 </body>
 </html>
